SE MODIFICO EL WORD CON OBSERVACIONES Y SE CAMBIO EL ORDEN